# ds-projects

./: README.md  Untitled.ipynb
aibnb-ny/: airbnb-ny-analysis.ipynb
ds-projetc-titanic/: titanic-tran-data.ipynb
ds-projetc-titanic/notebook/eda/: titanic-tran-data.ipynb
ds-projetc-titanic/notebook/eda/.ipynb_checkpoints/: titanic-tran-data-checkpoint.ipynb
founds-explorer-scraping/: funds_explorer_scraping.ipynb
health_insurance/: insurance_claimns.ipynb  pyproject.toml
modelo-de-inadimplencia/: modelo-de-inadimplencia.ipynb
shopping-nova-america-scraping/: shopping_nova_america_scraping.ipynb
